Fix frontend health check and add serve package

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,8 +1,8 @@
 # Railway-specific Dockerfile for KaliShare Frontend
 FROM node:18-alpine
 
-# Install serve for static file serving
-RUN npm install -g serve
+# Install curl for health checks and serve for static file serving
+RUN apk add --no-cache curl && npm install -g serve
 
 # Set working directory
 WORKDIR /app
@@ -24,7 +24,7 @@ EXPOSE 3000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD wget --spider -q http://localhost:3000 || exit 1
+  CMD curl -f http://localhost:3000/ || exit 1
 
 # Serve the built app
 CMD ["serve", "-s", "build", "-l", "3000"] 
