Fix backend Dockerfile and create dedicated backend config

--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -24,5 +24,5 @@ EXPOSE 5000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:5000/health || exit 1
 
-# Start backend service
+# Start backend service with explicit node command
 CMD ["node", "server.js"] 
