--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,4 +1,5 @@
 # Railway-specific Dockerfile for KaliShare Frontend
+# Updated: Force rebuild to clear cache
 FROM node:18-alpine
 
 # Install curl for health checks and serve for static file serving
