--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -2,6 +2,9 @@
 # Updated: Force rebuild to clear cache
 FROM node:18-alpine
 
+# Force cache invalidation - change this value to force rebuild
+ARG CACHEBUST=2
+
 # Install curl for health checks and serve for static file serving
 RUN apk add --no-cache curl && npm install -g serve
 
@@ -20,12 +23,12 @@ COPY frontend/ ./
 # Build the React app
 RUN npm run build
 
-# Expose port
-EXPOSE 3000
+# Expose port (Railway will set PORT environment variable)
+EXPOSE ${PORT:-3000}
 
-# Health check
+# Health check (use PORT environment variable)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:3000/ || exit 1
+  CMD curl -f http://localhost:${PORT:-3000}/ || exit 1
 
-# Serve the built app
-CMD ["serve", "-s", "build", "-l", "3000"] 
+# Serve the built app (use PORT environment variable)
+CMD ["sh", "-c", "serve -s build -l ${PORT:-3000}"] 
