Comprehensive industry-standard testing: backend+frontend unit, integration, e2e, CI/CD, coverage, docs, runner script

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://marcharriman@localhost:5432/kalishare
 NODE_ENV=development
-PORT=5001 
+PORT=5001
+HUGGING_FACE_API_KEY=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 
