--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,15 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --detectOpenHandles",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --detectOpenHandles",
+    "test:unit": "jest tests/unit --detectOpenHandles",
+    "test:integration": "jest tests/integration --detectOpenHandles",
+    "test:e2e": "jest tests/e2e --detectOpenHandles",
+    "test:ci": "jest --coverage --ci --detectOpenHandles --verbose",
+    "test:debug": "jest --detectOpenHandles --verbose --no-cache",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix"
   },
   "dependencies": {
     "@huggingface/inference": "^4.0.6",
@@ -26,7 +34,8 @@
   "devDependencies": {
     "jest": "^28.1.0",
     "nodemon": "^2.0.15",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "eslint": "^8.0.0"
   },
   "keywords": [
     "api",
